2004/02/29 01:39 (+0100) kaffeetisch

	* t/GtkRc.t: Don't assume the return value of get_style_by_paths
	is undef -- also allow a Gtk2::Style object.

2004/02/28 18:18 (+0100) kaffeetisch

	* t/GtkIconFactory.t: Test lookup_for_settings.

	* t/GtkRc.t: Test get_style_by_paths and reparse_all_for_settings.

	* t/GtkWidget.t: Test shape_combine_mask and
	queue_resize_no_redraw.

	* t/GtkComboBoxEntry.t
	* xs/GtkComboBoxEntry.xs: Bind and test new_text.

	* t/GtkFileChooser.t
	* xs/GtkFileChooser.xs: Remove [sg]et_folder_mode.

	* t/GtkRc.t
	* xs/GtkRc.xs: Add a class argument to gtk_rc_get_style_by_paths,
	test it.  Bind and test gtk_rc_reset_styles.

	* t/GtkStyle.t
	* xs/GtkStyle.xs: Bind and test Gtk2::draw_insertion_cursor.

	* t/GtkTreeView.t
	* xs/GtkTreeViewColumn.xs: Bind and test cell_set_cell_data and
	cell_get_size.

	* t/GtkWidget.t
	* xs/GtkWidget.xs: Initialize value and flag in the flags xsub.
	Bind and test list_mnemonic_labels, add_mnemonic_label, and
	remove_mnemonic_label.

2004/02/28 17:43 (+0100) kaffeetisch

	* t/Gdk.t: Handle the case of an already grabbed pointer
	gracefully.

	* t/GdkWindow.t: Test shape_combine_mask and set_back_pixmap.
	Re-enable the get_decorations test, in less strict fashion.

	* t/GtkTextIter.t: Finally test the last missing methods:
	get_toggled_tags, get_child_anchor, has_tag, get_tags, get_pixbuf,
	and get_attributes.

	* t/PangoLayout.t: Fix the skip: Pango 1.3.3 has been released.

2004/02/27 15:20 (-0500) muppetman

	* t/GtkWidget.t, xs/GtkWidget.xs: large patch from Torsten adds
	several things that are of importance when deriving containers in
	Perl.
	- removed Gtk2::Allocation, use use Gtk2::Gdk::Rectangle
	- new bindings for
	  Gtk2::Widget::requisition
	  Gtk2::Widget::size_allocate
	  Gtk2::Widget::saved_state
	  Gtk2::Widget::can_activate_accel (new in 2.4)
	  Gtk2::Widget::region_intersect
	  Gtk2::Widget::child_focus
	- don't segfault when a style property is not found.

2004/02/27 11:55 (-0500) muppetman